G720: fix the spacing in crop acreage table

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3912,13 +3912,13 @@ sup {
     width: 12.49%;
     position: relative;
     float: left;
-    height: 78px;
+    height: 70px;
 }
 .Crop-Acreage-tabel .tbl-fixd-hdr tbody > tr > td {
     width: 12.49%;
     position: relative;
     float: left;
-    height: 72px;
+    height: 53px;
 }
 
 .tbl-fixd-hdr.Crop-Limits-fixed-hdr-4 thead > tr > td, .tbl-fixd-hdr tbody.Crop-Limits-fixed-hdr-4 > tr > td {
